--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -3,25 +3,30 @@
     text-align: center;
     flex-direction: column;
     padding-top: 60px;
+    padding-bottom: 60px;
     width: 100%;
-    height: 90vh;
-    background-color: #dbf1ff;
+    height: 100vh;
+    background: rgb(239,254,253);
+    background: linear-gradient(62deg, rgba(239,254,253,1) 0%, rgba(255,255,255,1) 100%);
     align-items: center;
-    color: #FF5403;
+    color: #3aafa9;
 
 }
 
 .contact-me-container{
     width: 80%;
     height: 80%;
-    margin-top: 20px;
-    background: rgb(163,198,255);
-    background: linear-gradient(230deg, rgba(163,198,255,1) 29%, rgba(255,230,154,1) 100%);
-    border: #2d90d6 2px solid;
+    margin-top: 40px;
+    background: #e1f6f5;
     display: flex;
     flex-direction: row;
     border-radius: 5px;
     padding: 5px;
+}
+
+.contact-me h1{
+    margin-top: 40px;
+    color: #215c5b;
 }
 
 .image,.form{
@@ -35,17 +40,17 @@
 
 .image img{
     width: 100%;
-    height: 100%;
     object-fit: cover;
 }
 
 .form input,.form textarea{
     width: 70%;
     height: 30px;
-    border: #2d90d6 2px solid;
     border-radius: 5px;
-    background-color: #dbf1ff;
+    background-color: #ffffff;
     margin-bottom: 20px;
+    border: none;
+    padding-left: 7px;
 }
 
 #message{
@@ -61,13 +66,14 @@
     font-size: 15px;
     outline: none;
     text-align: center;
-    background-color: #2d90d6;
+    background-color: #3aafa9;
     color: #fff;
+    border: none;
 }
 
 .form .button:hover,
 .form .button:focus{
-    background-color: rgb(0, 99, 170)
+    background-color: #215c5b
 }
 form{
     margin: 0;
