--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,18 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
 
-:root{
-    --Lbl: rgb(163, 198, 255);
-    --Lorng: rgb(255, 230, 154);
-    --orng: rgb(255, 206, 67);
-}
-
 nav{
     position: fixed;
-    background-color: var(--Lbl);
-    border-bottom: 3px solid #ffffff;
-    height: 80px;
+    background: rgb(239,254,253);
+    background: linear-gradient(62deg, rgba(239,254,253,1) 0%, rgba(255,255,255,1) 100%);
+    border-bottom: 1px solid #3aafa9;
+    height: 130px;
     width: 100%;
     z-index: 4;
+}
+
+.nav-top{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: rgba(58, 175, 169, 0.13) 1px solid;
+    padding-left: 50px;
+    padding-right: 20px;
+}
+
+.nav-buttons {
+    height: 80px;
+    padding-right: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.beh-nav{
+    height: 130px;
+    width: 100%;
 }
 
 .logo{
@@ -20,47 +35,45 @@ nav{
     height: 80px;
 }
 nav ul{
-    float: right;
+    float:left;
     margin-right: 20px;
+    width: 100%;
+    background: linear-gradient(62deg, rgba(239,254,253,1) 0%, rgba(255,255,255,1) 100%);
+    border-bottom: #3aafa9 2px solid;
+    padding-left: 40px;
 }
 
  nav ul li {
     display: inline-block;
-    line-height: 80px;
-    margin: 0 15px;
+    line-height: 50px;
+    margin: 0 10px;
 } 
 
 nav ul li .a ,nav ul li a{
-    color: white;
-    font-size: 17px;
+    color: #215c5b;
+    font-size: 14px;
+    font-weight: 700;
     text-transform: uppercase;
-    padding: 7px 13px;
+    padding: 3px 17px;
     border: 2px transparent solid;
-    border-radius: 5px;
     cursor: pointer;
 }
 
- nav ul li a:focus{
-     text-shadow: 2px 2px 6px #ffffff;
-     border: 2px white solid;
-
-}
 
 nav ul li a:hover{
-    text-shadow: 2px 2px 6px #ffffff;
-    border-bottom: 2px white solid;
+    color: #3aafa9;
+    border-bottom: 2px #3aafa9 solid;
 }
 
 
-ul button {
-    margin: 5px;
-    border: 1px solid transparent;
+.nav-top button {
+    margin-left: 20px;
     border-radius: 5px;
     box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
     box-sizing: border-box;
     cursor: pointer;
     display: inline-block;
-    font-weight: 900;
+    font-weight: 600;
     font-size: 15px;
     outline: none;
     padding: 8px .8em;
@@ -68,24 +81,31 @@ ul button {
     text-align: center;
 }
 
+.hid-but{
+    display: none;
+}
+
 .register{
-    background-color: #2d90d6;
-    color: #fff;
+    background-color: #d7f0ef;
+    color: #3aafa9;
+
 }
 
 .register:hover,
 .register:focus {
-  background-color: rgb(0, 99, 170);
+    background-color: #3aafa9;
+    color: #ffffff;;
 }
 
 .signin{
-    background-color: var(--Lorng);
-    color: rgb(226, 150, 10);
+    background-color: #ffffff;
+    border: 1px #3aafa9 solid;
+    color: #3aafa9;
 }
 
 .signin:hover,
 .signin:focus {
-  background-color: var(--orng);
+  background-color: #3aafa9;
   color: #ffffff;
 }
 
@@ -114,7 +134,7 @@ ul button {
     margin-bottom: 5px;
     position: relative;
 
-    background-color: rgb(255, 255, 255);
+    background-color: #3aafa9;
     border-radius: 6px;
     z-index: 1;
     transform-origin: 0 0;
@@ -125,14 +145,18 @@ ul button {
 nav select {
     padding: 5px;
     border-radius: 5px;
-    border: #2d90d6 2px solid;
-    background-color: #dbf1ff;
+    background-color: #eeffff;
     cursor: pointer;
+    color: #3aafa9;
+    font-weight: 500;
+    border: 0;
+    outline: 0;
 }
+
 
 .hamburger:hover span:nth-child(2){
     transform: translateX(15px);
-    background-color: var(--orng);
+    background-color: #98e1dc;
 }
 
 .hamburger.is-active span:nth-child(1){
@@ -148,32 +172,45 @@ nav select {
     transform: translate(0px,5px) rotate(-45deg);
 }
 
-@media (max-width: 1300px){
-    .logo{
-        font-size: 30px;
-        padding-left: 50px;
-    }
-    nav ul li a{
-        font-size:16px;
-    }
-}
-@media(max-width:1260px){
+
+@media(max-width:900px){
     .hamburger{
         display: block;
+    }
+    nav{
+        height: 80px;
+    }
+    .beh-nav{
+        height: 80px;
     }
     nav ul{
         position: fixed;
         width: 100%;
         height: 100vh;
-        background-color: rgb(113, 149, 209);
+        background: rgb(239,254,253);
+        background: linear-gradient(62deg, rgba(239,254,253,1) 0%, rgba(255,255,255,1) 100%);
         top :80px;
         left :-100%;
         text-align: center;
         transition: all .5s;
+    }
+    .nav-buttons{
+        display: none;
+    }
+    nav ul li,.hid-but{
+        display: block;
+    }
+    .hid-but{
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
     }
-    nav ul li{
-        display: block;
-
+    .hid-but button,.hid-but select{
+        margin-bottom: 20px;
+        width: 100px;
+        cursor: pointer;
+        border-radius: 5px;
     }
 }
