--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -5,8 +5,7 @@
     width: 100%;
     padding-top: 60px;
     padding-bottom: 60px;
-    background: rgb(239,254,253);
-    background: linear-gradient(62deg, rgba(239,254,253,1) 0%, rgba(255,255,255,1) 100%);
+    background: #ffffff;
     color: #215c5b;
 }
 /*rgba(255,230,154,1)*/
