--- a/src/components/BigCard/BigCard.css
+++ b/src/components/BigCard/BigCard.css
@@ -6,14 +6,21 @@
 .bigcard-container{
     width: 100%;
     height: 900px;
-    background-color: #dbf1ff;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 60px;
+
 }
 
 .bigcard-container h1{
-    margin: 10px;
+    margin-bottom: 40px;
+    align-self: start;
+    padding-left: 120px;
+    font-size: 45px;
+    font-weight: 600;
+    color: #215c5b;
 }
 
 .bigcard-container div{
@@ -55,6 +62,7 @@
 
 .bigcard-description{
     padding: 20px;
+    width: 1520px;
     border-radius: 10px;
     background: rgb(228,239,231);
     background: linear-gradient(180deg, rgba(228,239,231,1) 0%, rgba(253,250,246,1) 100%);
