--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -12,10 +12,8 @@
     color: #215c5b;
 }
 #catalog{
-    background: rgb(239,254,253);
-    background: linear-gradient(62deg, rgba(239,254,253,1) 0%, rgba(255,255,255,1) 100%);
+    background: #ffffff;
     padding-top: 100px;
-    background-color: #dbf1ff;
 }
 
 #catalog select{
