--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -6,8 +6,7 @@
     padding-bottom: 60px;
     width: 100%;
     height: 100vh;
-    background: rgb(239,254,253);
-    background: linear-gradient(62deg, rgba(239,254,253,1) 0%, rgba(255,255,255,1) 100%);
+    background: #ffffff;
     align-items: center;
     color: #3aafa9;
 
